fixed some texts

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <a href="https://instagram.com/" aria-label="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
             </div>
             <hr>
-            <p>Copyright <i class="fa-solid fa-copyright" aria-hidden="true"></i> 2024, Staybnb</p>
+            <p>Copyright <i class="fa-solid fa-copyright" aria-hidden="true"></i> 2024</p>
         </footer>
     </main>
 
