--- a/listing.html
+++ b/listing.html
@@ -205,7 +205,7 @@
         <a href="https://linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
         <a href="https://instagram.com/"><i class="fab fa-instagram"></i></a>
         <hr>
-        <p>Copyright <i class="fa-solid fa-copyright"></i> 2024, Easy Tutorials</p>
+        <p>Copyright <i class="fa-solid fa-copyright"></i> 2024</p>
     </div>
 </div>
 
